# muchas-radio

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile.integrated  LICENSE  README.md  deploy.sh  docker-compose.yml  docker-deploy.sh  init-ssl.sh  update.sh
backend/: Cargo.toml  Dockerfile  Dockerfile.example  README.md  docker-entrypoint.sh  mpd.conf.example  mpd.conf.template  start-dev.sh
backend/src/: main.rs  models.rs  mpd_manager.rs  state.rs
backend/src/api/: mod.rs  playlist.rs  stream.rs  upload.rs
frontend/: Dockerfile  Dockerfile.serve  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: InstallButton.tsx  NowPlaying.tsx  Player.tsx  Queue.tsx  TermsAndConditions.tsx  UploadForm.tsx  UsernameModal.tsx
frontend/src/hooks/: usePWAInstall.ts  useRadio.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
mpd/: Dockerfile  docker-entrypoint.sh  mpd.conf
nginx/: nginx.conf
nginx/conf.d/: muchas-radio-ssl.conf.example  muchas-radio.conf
