[package]
name = "muchas-radio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-ws = "0.3"
actix-multipart = "0.7"
actix-cors = "0.7"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
mpd_client = { version = "1.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
sanitize-filename = "0.5"
reqwest = { version = "0.12", features = ["stream"] }
